src/test/resources/tests/typeError/noArgsToVararg.qg

init {
    map = treeMap()
}

run true

input(a,b) true